--- a/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -15,7 +15,7 @@
 <ul class="heroes">
   <!--Itero sobre los héroes y a cada uno le asigno un list item-->
   <li *ngFor="let hero of heroesConstantes" (click)="onSelect(hero)" [class.selected]="hero === heroeSeleccionado"> <!--Ponemos un evento para el click, de forma que se llame al método onSelect y se le pase como parámetro el objeto heroe correspondiente al list item que se ha picado-->
-      <span class="badge">{{hero.id}}{{hero.name}}</span>
+      <span class="badge">{{hero.id}}</span>{{hero.name}}
     
   </li>
 </ul>
@@ -25,3 +25,4 @@
 <app-hero-detail [hero]="heroeSeleccionado"></app-hero-detail>
 
 <!--Now when the user clicks a hero in the list, the selectedHero changes. When the selectedHero changes, the property binding updates hero and the HeroDetailComponent displays the new hero.-->
+
